cabal-version: 3.0
name: cfg-parser-topdown
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Kazutaka Matsuda
maintainer: kztk@tohoku.ac.jp
-- copyright:
category: Text
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options:
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if impl(ghc >=9.0) && impl(ghc <9.3)
    ghc-options: -Wno-unticked-promoted-constructors

  if impl(ghc >=9.0)
    ghc-options: -Winvalid-haddock

  if impl(ghc >=9.2)
    ghc-options:
      -Wredundant-bang-patterns
      -Woperator-whitespace

  if impl(ghc >=9.4)
    ghc-options:
      -Wredundant-strictness-flags
      -Wgadt-mono-local-binds

  if impl(ghc >=9.10.1)
    ghc-options:
      -Wbadly-staged-types

library
  import: warnings
  exposed-modules:
    Text.TopDownParser

  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <5,
    containers,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite cfg-parser-topdown-test
  import: warnings
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.7 && <5,
    cfg-parser-topdown,
    hspec,
